log/build_2026-04-04_14-46-59/flapping_foil_propulsors_control/stderr.log
  File "/home/shafa/flapping-propulsors-control/install/flapping_foil_propulsors_control/lib/python3.12/site-packages/flapping_foil_propulsors_control/CrabController2DOF.py", line 126
    """Fixed 90-degree roll with sinusoidal pitch."""
       ^^^^^
SyntaxError: invalid syntax

